--- a/main page/index.html
+++ b/main page/index.html
@@ -198,7 +198,7 @@
       </div>
       <div class="included">
         <div class="">
-                  <h4 style="color: white;">© 2021—20XX «KazAli». All rights reserved.</h4>
+                  <h4 style="color: white;">© 2021 «KazAli». All rights reserved.</h4>
         </div>
       </div>
     </div>
